--- a/Monday_Lecture_Class.ipynb
+++ b/Monday_Lecture_Class.ipynb
@@ -1425,12 +1425,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=0\n",
+    "i=0\n",
+    "for i in range(20):\n",
+    "    c=i**3\n",
+    "    if c>1000:\n",
+    "        break\n",
+    "    else:\n",
+    "        print(c)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1442,10 +1470,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime_nums=[]\n",
+    "for i in range(101):\n",
+    "    if i%2==0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        not_even=True\n",
+    "        for j in range(2,i):\n",
+    "            if i%j ==0:\n",
+    "                not_even=False\n",
+    "                break\n",
+    "        if not_even==True:\n",
+    "                print(i)\n",
+    "                "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1453,6 +1527,31 @@
    "source": [
     "# Exercise 3 <br>\n",
     "<p>Take in a users input for their age, if they are younger than 18 print kids, if they're 18 to 65 print adults, else print seniors</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you?27\n",
+      "adults\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=int(input(\"How old are you?\"))\n",
+    "if age<18:\n",
+    "    print(\"kids\")\n",
+    "elif age<66:\n",
+    "    print(\"adults\")\n",
+    "else:\n",
+    "    print(\"seniors\")\n",
+    "    "
    ]
   },
   {
